--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,10 +3,11 @@ cmake_minimum_required(VERSION 3.12)
 project("your-camp" CXX)
 
 # Import libraries if required
-find_library(LIBCURL libcurl)
-if(NOT libcurl_FOUND)
-    message("LIBCURL NOT FOUND")
+find_package(CURL REQUIRED)
+if(NOT CURL_FOUND)
+    message("CURL IS NOT FOUND! Trying local directory...")
     add_subdirectory("external/curl")
+    find_library(libcurl REQUIRED)
 endif()
 
 # Add source subdirectory
